--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -10,27 +10,37 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main class="contenedor">
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+    <header class="contenedor__header">
+      <img class="header__imagen--avatar" src="./assets/images/avatar-jessica.jpeg" alt="Foto avatar de la empleada Jessica">
+      <h1 class="header__informacion--nombre">Jessica Randall</h1>
+      <p class="header__informacion--ubicacion">London, United Kingdom</p>
+    </header>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+
+    <p class="rol">"Front-end developer and avid reader."</p>
+    
+
+    <nav class="contenido__navegacion" aria-label="bottones de navegacion para redes sociales">
+      <ul class="contenido__navegacion--listado">
+        <li class="contenido__navegacion--item"><a class="contenido__navegacion--link" href="#" aria-label="Boton red social GITHUB">GitHub</a></li>
+        <li class="contenido__navegacion--item"><a class="contenido__navegacion--link" href="#" aria-label="Boton red social FRONTEND MENTOR">  Frontend Mentor</a></li>
+        <li class="contenido__navegacion--item"><a class="contenido__navegacion--link" href="#" aria-label="Boton red social LINKEDIN">LinkedIn</a></li>
+        <li class="contenido__navegacion--item"><a class="contenido__navegacion--link" href="#" aria-label="Boton red social TWITTER">Twitter</a></li>
+        <li class="contenido__navegacion--item"><a class="contenido__navegacion--link" href="#" aria-label="Boton red social INSTAGRAM">Instagram</a></li>
+      </ul>
+    </nav>
+    
+    <footer class="contenedor__footer">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Nelinho Maza</a>.
+    </footer>
+
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 </html>
